--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -17,10 +17,11 @@
 
 .sidebar-menu li {
     padding: 5px;
+    margin-bottom: 1px;
 }
 
 .sidebar-menu li:hover {
-    border-bottom: solid 1px black;
+    box-shadow: inset 0 -1px 0 0 black;
     cursor: pointer;
 }
 
