--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,40 +1,41 @@
+@import url(https://fonts.googleapis.com/css?family=Nunito);.main {
+  padding-top: 60px;
+  padding-left: 200px !important;
+}
+
+.main .notification {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-    overflow: hidden;
-    width: 20%;
-    height: 100%;
-    padding-top: 56px;
-    box-shadow: 0 5px 15px rgba(57, 98, 254, 0.02), 0 3px 6px rgba(117, 108, 254, 0.12);
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 1000;
+  overflow: hidden;
+  width: 200px;
+  height: 100%;
+  padding-top: 60px;
+  box-shadow: 0 5px 15px rgba(57, 98, 254, 0.02), 0 3px 6px rgba(117, 108, 254, 0.12);
 }
 
-.sidebar-menu {
-    padding: 10px;
-    list-style: none;
+.sidebar .sidebar-menu {
+  padding: 10px;
+  list-style: none;
 }
 
-.sidebar-menu li {
-    padding: 5px;
-    margin-bottom: 1px;
-    display: flex;
-    justify-content: space-between;
+.sidebar .sidebar-menu li {
+  padding: 5px;
+  margin-bottom: 1px;
+  display: flex;
+  justify-content: space-between;
 }
 
-.sidebar-menu li:hover {
-    box-shadow: inset 0 -1px 0 0 black;
-    cursor: pointer;
+.sidebar .sidebar-menu li:hover {
+  box-shadow: inset 0 -1px 0 0 black;
+  cursor: pointer;
 }
 
-.main {
-    padding-top: 80px;
-    padding-left: 25% !important;
-    padding-right: 10% !important;
-}
-
-.notification {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
