--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -23,3 +23,6 @@ $header-height: 60px;
 
 // Sidebar
 $sidebar-width: 200px;
+
+$box-shadow: 0 5px 15px rgba(57, 98, 254, 0.02),
+0 3px 6px rgba(117, 108, 254, 0.12);
