--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -15,7 +15,7 @@
     #notification-info-card {
         padding: 1rem;
         margin-bottom: 1rem;
-        border-radius: .25rem;
+        border-radius: 0.25rem;
         box-shadow: $box-shadow;
 
         .row {
